2004-09-02  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (serve_directory): C89 compilers do not like mixed
	declarations and code.

2004-08-19  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (sync-secondary): 'dirname -b' fails during the
	spacefiles-5 test on FreeBSD, so use 'dirname -- "\$dir"' for now
	and look to AS_DIRNAME at some future date.	

2004-08-19  Derek Price  <derek@ximbiot.com>

	* sanity.sh (ssh-wrapper): Create for $proxy mode too & forward CVS_PID
	for crerepos.

2004-08-18  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (writeproxy): Use CVS_PID instead of PPID as the
	former environment variable is set by cvs and the latter is
	NOT set by all bourne shells.

2004-08-18  Mark D. Baushke  <mdb@cvshome.org>

	* log-buffer.c (log_buffer_rewind): Avoid FreeBSD compilation
	error for dereferencing a void * pointer tmp as well as using it
	as a buffer pointer under some conditions.

2004-08-17  Derek Price  <derek@ximbiot.com>

	* server.c (isProxyServer): Always compile.  Cache hostname lookup.
	(serve_notify): Ignore notifications in conjunction with redirects.
	(do_cvs_command): Send an error when !PROXY_SUPPORT and a client does
	not support redirects.  Only close proxy logs when they exist.
	(serve_command_prep): New function.
	* sanity.sh (secondary-wrapper, writeproxy): Dynamically switch the
	servers proxy/primary status for testing.
	(basica): Gratuitous reformatting.
	(devcom3, config, release): Handle some new proxy/redirect error
	messages.

2004-08-17  Derek Price  <derek@ximbiot.com>

	* main.c (PrimaryServer): Include without PROXY_SUPPORT to support
	redirects.
	(main): Handle --primary-root without PROXY_SUPPORT.
	* mkmodules.c (PrimaryServer), parseinfo.c (parse_config), root.c
	(primary_root_add, primary_root_translate,
	primary_root_inverse_translate): Likewise.

2004-08-17  Derek Price  <derek@ximbiot.com>

	* client.c: Misc reformatting.
	(handle_redirect, close_connection_to_server): New functions.